# tokledger

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GITHUB_PUBLISH_PLAN.md  POSITIONING_AND_ROADMAP.md  POSITIONING_AND_ROADMAP.zh-CN.md  PRODUCT_BRIEF.md  RELEASE_NOTES_v0.1.0.md
scripts/: install_launchd.sh  python_env.sh  run_daily_report.sh  run_kaku_proxy.sh  run_scan.sh  uninstall_launchd.sh
src/tokkit/: augment_capture.py  cli.py  clients.py  ingest_warp.py  pricing.py  tok.py  utils.py
src/tokstat/: __init__.py  cli.py  clients.py  db.py  ingest_codebuddy.py  ingest_codex.py  ingest_warp.py  pricing.py  proxy.py  tok.py  utils.py
tools/: README.md
tools/tokkit/: .gitignore  README.md  README.zh-CN.md  pyproject.toml
tools/tokkit/docs/: PRODUCT_BRIEF.md
tools/tokkit/scripts/: run_daily_report.sh  run_kaku_proxy.sh  run_scan.sh
tools/tokkit/src/tokkit/: budget.py  cli.py  clients.py  db.py  ingest_augment.py  ingest_augment_history.py  ingest_chatgpt_export.py  ingest_claude_code.py  ingest_codex.py  ingest_copilot.py  ingest_cursor.py  ingest_trae.py  pricing.py  proxy.py  tok.py  utils.py
tools/tokkit/src/tokstat/: budget.py  clients.py  db.py  ingest_codebuddy.py  proxy.py  tok.py  utils.py
tools/tokkit/tests/: test_pricing.py  test_report_rendering.py  test_terminal_classification.py
