[project]
name = "tokkit"
version = "0.1.0"
description = "Lightweight local-first usage ledger for AI coding tools, terminals, and desktop assistants."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []
keywords = ["ai", "llm", "token-tracking", "terminal", "developer-tools", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.scripts]
tokkit = "tokkit.cli:main"
tok = "tokkit.tok:main"
tokstat = "tokkit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
